--- a/src/components/Blogblock.astro
+++ b/src/components/Blogblock.astro
@@ -20,7 +20,9 @@ type Fronmatter = {
 };
 ---
 
-<section class="flex flex-row rounded-lg bg-neutral-900 w-auto p-3">
+<div
+	class="flex flex-row rounded-lg bg-neutral-900 w-auto p-3 hover:-translate-y-1"
+>
 	<div class="flex flex-col">
 		<!-- 文章標題 -->
 		<a href=`/blogs/${mdx}`>
@@ -43,4 +45,4 @@ type Fronmatter = {
 	<div id="image" class="rounded-lg w-full h-64">
 		<img src=`${info.image}` class="rounded-lg w-full h-full" />
 	</div>
-</section>
+</div>
