--- a/src/layouts/DefaultWebsite.astro
+++ b/src/layouts/DefaultWebsite.astro
@@ -15,12 +15,18 @@ const { pageTitle } = Astro.props;
 
 	<body class="flex flex-col bg-neutral-950 text-white min-h-screen">
 		<!-- 導覽行 -->
-		<header class="bg-black h-16 flex items-center justify-evenly sticky top-0">
-			<a href="/" class="text-white text-lg">PepperSauce</a>
+		<header
+			style="border-color: #717171;"
+			class="h-16 flex items-center justify-evenly sticky top-0 backdrop-blur border-b-[0.5px]"
+		>
+			<a href="/" class="text-white text-lg link-underline">PepperSauce</a>
 			<div class="flex items-center justify-evenly gap-5">
-				<a href="/about" class="text-white text-lg">關於</a>
-				<a href="/blog" class="text-white text-lg">部落格</a>
-				<a href="/contact" class="text-white text-lg">聯絡</a>
+				<a
+					href="/about"
+					class="text-white text-lg link-underline active:to-blue-300">關於</a
+				>
+				<a href="/blog" class="text-white text-lg link-underline">部落格</a>
+				<a href="/contact" class="text-white text-lg link-underline">聯絡</a>
 			</div>
 		</header>
 
@@ -36,13 +42,22 @@ const { pageTitle } = Astro.props;
 		>
 			<div class="flex flex-row gap-6 mt-1">
 				<a href="https://www.instagram.com/po_shan.0611/" target="_blank">
-					<Icon name="simple-icons:instagram" class="text-white text-2xl" />
+					<Icon
+						name="simple-icons:instagram"
+						class="text-white text-2xl hover:opacity-80"
+					/>
 				</a>
 				<a href="https://discord.com/users/514774919381516288" target="_blank">
-					<Icon name="simple-icons:discord" class="text-white text-2xl" />
+					<Icon
+						name="simple-icons:discord"
+						class="text-white text-2xl hover:opacity-80"
+					/>
 				</a>
 				<a href="https://github.com/PepperSauce0712" target="_blank">
-					<Icon name="simple-icons:github" class="text-white text-2xl" />
+					<Icon
+						name="simple-icons:github"
+						class="text-white text-2xl hover:opacity-80"
+					/>
 				</a>
 			</div>
 			<p></p>
