--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,11 +10,11 @@ import Blogblock from "../components/Blogblock.astro";
 	/>
 
 	<!-- 精選文章x4 -->
-	<div class="mt-48 flex flex-col items-center">
+	<div class="mt-48 flex flex-col items-center first-in">
 		<h1 class="text-white font-bold text-3xl mb-1">精選文章</h1>
 		<p class="text-neutral-400 text-xl">每一篇都花費許多心思撰寫的</p>
 	</div>
-	<section class="grid grid-cols-2 w-1/2 h-auto gap-4">
+	<section class="grid grid-cols-2 w-1/2 h-auto gap-4 second-in">
 		<Blogblock mdx="whoami" />
 		<Blogblock mdx="test1" />
 		<Blogblock mdx="whoami" />
