--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,20 +13,20 @@ import { Image } from "astro:assets";
 				alt="PepperSauce的頭貼"
 				width="150"
 				height="150"
-				class="rounded-full outline outline-1 outline-neutral-700 mb-6"
+				class="rounded-full outline outline-1 outline-neutral-700 mb-6 first-in"
 			/>
-			<p class="text-4xl">
+			<p class="text-4xl second-in">
 				你好，我是 <span class="text-green-300">PepperSauce</span>
 			</p>
-			<p class="text-xl text-neutral-300 mt-2">
+			<p class="text-xl text-neutral-300 mt-2 second-in">
 				InfoSec · Programming · Locking
 			</p>
 		</div>
 
-		<div class="flex flex-row gap-x-8">
+		<div class="flex flex-row gap-x-8 third-in">
 			<a
 				href="/about"
-				class="w-40 h-12 flex flex-row items-center justify-center border bg-neutral-900 border-neutral-700 rounded-lg"
+				class="w-40 h-12 flex flex-row items-center justify-center border bg-neutral-900 border-neutral-700 rounded-lg hover:border-white"
 			>
 				<span class="text-lg font-bold">關於我</span>
 				<Icon name="ion:arrow-forward" class="w-5 h-5 ml-4" />
@@ -34,7 +34,7 @@ import { Image } from "astro:assets";
 
 			<a
 				href="/blog"
-				class="w-40 h-12 flex flex-row items-center justify-center border bg-neutral-900 border-neutral-700 rounded-lg"
+				class="w-40 h-12 flex flex-row items-center justify-center border bg-neutral-900 border-neutral-700 rounded-lg hover:border-white"
 			>
 				<span class="text-lg font-bold">部落格</span>
 				<Icon name="ion:arrow-forward" class="w-5 h-5 ml-4" />
