--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,7 +5,7 @@ import { Icon } from "astro-icon/components";
 
 <DefaultWebsite pageTitle="PepperSauce | 聯絡我">
 	<!-- 寄信表單 -->
-	<div class="mt-48 flex flex-col items-center first-in">
+	<div class="mt-48 flex flex-col items-center">
 		<h1 class="text-white font-bold text-3xl mb-1">聯絡我</h1>
 		<p class="text-neutral-400 text-xl">更推薦以社群媒體的方式聯絡我喔！</p>
 	</div>
@@ -13,7 +13,7 @@ import { Icon } from "astro-icon/components";
 	<form
 		action="https://formsubmit.co/psauceshan11@gmail.com"
 		method="POST"
-		class="w-1/6 flex flex-col second-in"
+		class="w-1/6 flex flex-col mt-8"
 	>
 		<label for="name" class="text-xl">稱呼</label>
 		<input
@@ -58,12 +58,12 @@ import { Icon } from "astro-icon/components";
 	</form>
 
 	<!-- 我的社交媒體 -->
-	<div class="mt-16 flex flex-col items-center first-in">
+	<div class="mt-16 flex flex-col items-center">
 		<h1 class="text-white font-bold text-3xl mb-1">社群媒體</h1>
 		<p class="text-neutral-400 text-xl">加好友後請主動說明來意，謝謝你。</p>
 	</div>
 
-	<section class="flex flex-col w-1/6 gap-y-4 mb-48 second-in">
+	<section class="flex flex-col w-1/6 gap-y-4 mb-48 mt-8">
 		<!-- Instagram -->
 		<div
 			class="w-full h-auto flex flex-row bg-neutral-900 border border-neutral-700 rounded-lg p-3"
