--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -3,7 +3,7 @@ import DefaultWebsite from "../layouts/DefaultWebsite.astro";
 import Blogblock from "../components/Blogblock.astro";
 ---
 
-<DefaultWebsite pageTitle="PepperSauce | 部落格">
+<DefaultWebsite pageTitle="PepperSauce | 作品集">
 	<link
 		rel="stylesheet"
 		href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
