--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,44 +1,96 @@
 ---
 import DefaultWebsite from "../layouts/DefaultWebsite.astro";
+import Logoimage from "../components/Logoimage.astro";
 import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
 ---
 
 <DefaultWebsite pageTitle="PepperSauce | 個人網頁">
 	<!-- 主頁 -->
-	<section class="flex flex-col items-center gap-y-24 p-16 mt-48">
-		<div class="flex flex-col items-center">
+	<section class="flex flex-col items-center gap-y-24 h-screen">
+		<div class="mt-60 flex flex-col items-center">
 			<Image
 				src="/images/PepperSauce_icon.jpg"
 				alt="PepperSauce的頭貼"
 				width="150"
 				height="150"
-				class="rounded-full outline outline-1 outline-neutral-700 mb-6 first-in"
+				class="rounded-full outline outline-1 outline-neutral-700 mb-6"
 			/>
-			<p class="text-4xl second-in">
+			<p class="text-4xl">
 				你好，我是 <span class="text-green-300">PepperSauce</span>
 			</p>
-			<p class="text-xl text-neutral-300 mt-2 second-in">
+			<p class="text-xl text-neutral-300 mt-2">
 				InfoSec · Programming · Locking
 			</p>
 		</div>
 
-		<div class="flex flex-row gap-x-8 third-in">
+		<div class="flex flex-row gap-x-8">
 			<a
-				href="/about"
+				href="/experience"
 				class="w-40 h-12 flex flex-row items-center justify-center border bg-neutral-900 border-neutral-700 rounded-lg hover:border-white"
 			>
-				<span class="text-lg font-bold">關於我</span>
+				<span class="text-lg font-bold">經歷</span>
 				<Icon name="ion:arrow-forward" class="w-5 h-5 ml-4" />
 			</a>
 
 			<a
-				href="/blog"
+				href="/portfolio"
 				class="w-40 h-12 flex flex-row items-center justify-center border bg-neutral-900 border-neutral-700 rounded-lg hover:border-white"
 			>
-				<span class="text-lg font-bold">部落格</span>
+				<span class="text-lg font-bold">作品集</span>
 				<Icon name="ion:arrow-forward" class="w-5 h-5 ml-4" />
 			</a>
+		</div>
+		<a href="#skill">
+			<Icon name="ion:arrow-down" class="mt-72 w-10 h-10 opacity-70 hover:opacity-100 animate-bounce" />
+		</a>
+		
+	</section>
+
+	<!-- 技能栈 -->
+	<section class="flex flex-col items-center" id="skill">
+		<div class="flex flex-col items-center">
+			<h1 class="text-white font-bold text-3xl mb-1">技術棧</h1>
+			<p class="text-neutral-400 text-xl">有學過的技術與工具</p>
+		</div>
+
+		<div class="grid grid-cols-4 gap-x-10 gap-y-10 mt-16 second-in">
+			<h2 class="text-white text-lg text-center">前端開發</h2>
+			<h2 class="text-white text-lg text-center">後端開發</h2>
+			<h2 class="text-white text-lg text-center">遊戲開發</h2>
+			<h2 class="text-white text-lg text-center">其他</h2>
+			<div class="grid grid-cols-2 gap-8 grid-rows-3">
+				<Logoimage icon="/ui_icons/astro-svgrepo-com.svg" name="Astro" />
+				<Logoimage
+					icon="/ui_icons/tailwind-css-svgrepo-com.svg"
+					name="Tailwind"
+				/>
+			</div>
+			<div class="grid grid-cols-2 gap-8 grid-rows-3">
+				<Logoimage icon="/ui_icons/cpp-svgrepo-com.svg" name="C++" />
+				<Logoimage icon="/ui_icons/python-127-svgrepo-com.svg" name="Python" />
+				<Logoimage
+					icon="/ui_icons/javascript-svgrepo-com.svg"
+					name="Javascript"
+				/>
+			</div>
+			<div class="grid grid-cols-2 gap-8 grid-rows-3">
+				<Logoimage
+					icon="/ui_icons/unreal-engine-svgrepo-com.svg"
+					name="Unreal"
+				/>
+			</div>
+			<div class="grid grid-cols-2 gap-8 grid-rows-3">
+				<Logoimage icon="/ui_icons/vscode-svgrepo-com.svg" name="Vscode" />
+			</div>
+		</div>
+	</section>
+
+	<!-- 流水型作品集 -->
+	<section class="flex flex-col items-center mt-52" id="portfolios">
+		<div class="flex flex-col items-center">
+			<h1 class="text-white font-bold text-3xl mb-1">作品集</h1>
+			<p class="text-neutral-400 text-xl">在此展示的皆為精選作品</p>
 		</div>
 	</section>
 </DefaultWebsite>
