--- a/src/layouts/DefaultWebsite.astro
+++ b/src/layouts/DefaultWebsite.astro
@@ -21,6 +21,7 @@ const { pageTitle } = Astro.props;
 		>
 			<a href="/" class="text-white text-lg link-underline">PepperSauce</a>
 			<div class="flex items-center justify-evenly gap-5">
+				<a href="/friend" class="text-white text-lg link-underline">朋友</a>
 				<a
 					href="/experience"
 					class="text-white text-lg link-underline active:to-blue-300">經歷</a
