--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -2,6 +2,6 @@
 import DefaultWebsite from "../layouts/DefaultWebsite.astro";
 ---
 
-<DefaultWebsite pageTitle="PepperSauce | 履歷">
-	<!-- 自我介紹 -->
+<DefaultWebsite pageTitle="PepperSauce | 朋友">
+
 </DefaultWebsite>
