--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -8,23 +8,23 @@ import DefaultWebsite from "../layouts/DefaultWebsite.astro";
 			<h1 class="text-white font-bold text-3xl mb-1">學歷</h1>
 		</div>
 
-        <div class="group w-1/3 h-16 hover:h-52 duration-400 transition-all rounded-2xl border-1 bg-neutral-900 border-neutral-700 px-4 py-2 overflow-hidden">
+        <div class="group w-1/3 h-16 hover:h-52 duration-400 transition-all rounded-xl border-1 bg-neutral-900 border-neutral-700 px-4 py-2 overflow-hidden">
             <div class= "w-full h-12 flex justify-between items-center group-hover:border-neutral-700 group-hover:border-b-1">
                 <h2 class="text-2xl">高雄市立高級工業職業學校 資訊科</h2>
                 <p class="text-xl">2022 - 2025</p>
             </div>
-            <div class="text-lg overflow-hidden max-h-0 group-hover:max-h-40">
+            <div class="text-lg text-neutral-300 py-1 overflow-hidden max-h-0 group-hover:max-h-40">
                 <ul>
                     <li>• 2023 班際英語MV唱歌比賽 第一名</li>
                 </ul>
             </div>
         </div>
-        <div class="group w-1/3 h-16 hover:h-52 duration-400 transition-all rounded-2xl border-1 bg-neutral-900 border-neutral-700 px-4 py-2 overflow-hidden">
+        <div class="group w-1/3 h-16 hover:h-52 duration-400 transition-all rounded-xl border-1 bg-neutral-900 border-neutral-700 px-4 py-2 overflow-hidden">
             <div class= "w-full h-12 flex justify-between items-center group-hover:border-neutral-700 group-hover:border-b-1">
                 <h2 class="text-2xl">國立雲林科技大學 資訊管理系</h2>
                 <p class="text-xl">2025 - 至今</p>
             </div>
-            <div class="text-lg overflow-hidden max-h-0 group-hover:max-h-40">
+            <div class="text-lg text-neutral-300 py-1 overflow-hidden max-h-0 group-hover:max-h-40">
                 <ul>
                     <li>• 尚無</li>
                 </ul>
@@ -37,14 +37,14 @@ import DefaultWebsite from "../layouts/DefaultWebsite.astro";
 			<h1 class="text-white font-bold text-3xl mb-1">證書</h1>
 		</div>
 
-        <div class="w-1/3 h-16 duration-400 transition-all rounded-2xl border-1 bg-neutral-900 border-neutral-700 px-4 py-2 overflow-hidden">
+        <div class="w-1/3 h-16 rounded-xl border-1 bg-neutral-900 border-neutral-700 px-4 py-2 overflow-hidden">
             <div class= "w-full h-12 flex justify-between items-center">
                 <h2 class="text-2xl">工業電子</h2>
                 <p class="text-xl">丙級</p>
             </div>
         </div>
 
-        <div class="hidden group w-1/3 h-16 hover:h-52 duration-400 transition-all rounded-2xl border-1 bg-neutral-900 border-neutral-700 px-4 py-2 overflow-hidden">
+        <div class="hidden group w-1/3 h-16 hover:h-52 duration-400 transition-all rounded-xl border-1 bg-neutral-900 border-neutral-700 px-4 py-2 overflow-hidden">
             <div class= "w-full h-12 flex justify-between items-center group-hover:border-neutral-700 group-hover:border-b-1">
                 <h2 class="text-2xl">TOEIC Reading and Listening</h2>
                 <p class="text-xl">xx證書</p>
@@ -60,7 +60,7 @@ import DefaultWebsite from "../layouts/DefaultWebsite.astro";
 			<h1 class="text-white font-bold text-3xl mb-1">經歷</h1>
 		</div>
 
-        <div class="w-1/3 h-16 duration-400 transition-all rounded-2xl border-1 bg-neutral-900 border-neutral-700 px-4 py-2 overflow-hidden">
+        <div class="w-1/3 h-16 rounded-xl border-1 bg-neutral-900 border-neutral-700 px-4 py-2 overflow-hidden">
             <div class= "w-full h-12 flex justify-between items-center">
                 <h2 class="text-2xl">2024 資得其樂</h2>
                 <p class="text-xl">最佳創意獎</p>
