--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -39,6 +39,18 @@ import { Image } from "astro:assets";
 				<Image src="/images/UmmIt Kin.png" alt="UmmIt Kin的頭貼" width="50" height="50" class="rounded-full" />
 				<p class="text-xl">UmmIt Kin</p>
 			</a>
+			<a id="伊藤蒼太" href="https://itousouta15.github.io/" class="absolute friend w-56 h-16 rounded-full bg-neutral-900 overflow-hidden px-2 gap-x-3 flex items-center">
+				<Image src="/images/伊藤蒼太.png" alt="伊藤蒼太的頭貼" width="50" height="50" class="rounded-full" />
+				<p class="text-xl">伊藤蒼太</p>
+			</a>
+			<a id="Icrack" href="https://lbc0841.github.io/icrack41-blog/" class="absolute friend w-56 h-16 rounded-full bg-neutral-900 overflow-hidden px-2 gap-x-3 flex items-center">
+				<Image src="/images/Icrack.png" alt="Icrack的頭貼" width="50" height="50" class="rounded-full" />
+				<p class="text-xl">Icrack</p>
+			</a>
+			<a id="su2u4" href="https://github.com/su2u4-1/" class="absolute friend w-56 h-16 rounded-full bg-neutral-900 overflow-hidden px-2 gap-x-3 flex items-center">
+				<Image src="/images/su2u4.png" alt="su2u4的頭貼" width="50" height="50" class="rounded-full" />
+				<p class="text-xl">su2u4</p>
+			</a>
 		</div>
 
 		<script>
